[package]
name = "omg-api"
version = "0.1.0"
edition = "2021"
description = "Library for interacting with the omg.lol API, used by the omg crate"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
