[package]
name = "omg-api"
version = "0.1.0"
edition = "2021"
description = "Library for interacting with the omg.lol API, used by the omg crate"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
const_format = "0.2.31"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
structstruck = "0.4.1"
thiserror = "1.0.47"
